--- a/style.scss
+++ b/style.scss
@@ -14,6 +14,10 @@ $color: $black;
     font-size: 48px;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 h1, h2, h3 {
     color: $accent-color;
 }
@@ -149,3 +153,33 @@ input {
         }
      }
  }
+
+ #who-we-are {
+     div {
+        text-align: center;
+        width: 100%;
+
+         img {
+             width: 60%;
+
+             @media screen and (max-width: 1000px) {
+                 width: 100%;
+             }
+         }
+     }
+ }
+
+ #where-we-are {
+    div {
+       text-align: center;
+       width: 100%;
+
+        img {
+            width: 60%;
+
+            @media screen and (max-width: 1000px) {
+                width: 100%;
+            }
+        }
+    }
+}
