--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
   font-size: 48px;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   overflow-x: hidden;
 }
@@ -91,6 +95,22 @@ input {
 
 .inverted-bg {
   background-color: #22333B;
+}
+
+.navbar img {
+  height: 85px;
+}
+@media (max-width: 991px) {
+  .navbar img {
+    height: 60px;
+  }
+}
+.navbar a {
+  font-size: 24px;
+}
+
+#hero {
+  min-height: 0px !important;
 }
 
 #qualify {
