mobile styling fixes

--- a/style.css
+++ b/style.css
@@ -119,11 +119,11 @@ input {
   height: 1000px;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://udg-static-media.s3-us-west-1.amazonaws.com/girls-on-phones.jpg");
   background-position: center center;
-  padding-top: 300px !important;
+  padding-top: 300px;
 }
 @media (max-width: 991px) {
   #qualify {
-    padding-top: 2 0px !important;
+    padding-top: 200px !important;
   }
 }
 
